[gd_scene load_steps=9 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/name.png" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://sprites/BG_close.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 660.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 460.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="health" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 151.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Health: 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 460.0
margin_bottom = 39.0

[node name="score" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Score: "
align = 2

[node name="FPS" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 460.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "FPS: "

[node name="CPU_Times" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 460.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "CPU_Times: "

[node name="memory" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 460.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 2 )
text = "RAM usage: "

[node name="orphan_nodes" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 460.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
text = "Orphan Nodes: "

[node name="objects_count" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 460.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "Objects Count:  "

[node name="play_counts" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 460.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "Play Count:  "

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 568.0
margin_right = 460.0
margin_bottom = 660.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 460.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 226.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="clasic" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Clasic:"

[node name="story" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 226.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Story:"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 234.0
margin_right = 460.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="high_score_clasic" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 226.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Highest Score!"

[node name="fire_type" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 50.0
margin_right = 226.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "Laser_beam"
items = [ "Laser_beam", null, false, 0, null, "laser_fire", null, false, 1, null, "CREDITS", null, false, 2, null ]
selected = 0

[node name="player_fire_timer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 5.0
fixed_fps = 25
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 240, 1 )
linear_accel = 100.0
scale_amount_random = 1.0
hue_variation = 0.1
hue_variation_random = 1.0

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -392.0
margin_top = -39.0
custom_fonts/font = SubResource( 4 )
text = "Credits: Abdul Rauf       "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/clasic" to="." method="_on_clasic_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/fire_type" to="." method="_on_fire_type_item_selected"]
[connection signal="timeout" from="player_fire_timer" to="." method="_on_player_fire_timer_timeout"]
